--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -106,6 +106,45 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="xcblog-blog-list">
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-08">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「3月8日」最高速度21M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-8-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月8日」最高速度21M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了日本、加拿大、美国、欧洲、新加坡、韩国、香港等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-07">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/95bb0467eb6b57893fa4076c6c174669.webp" alt="「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-7-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月7日」最高速度22.4M/S，2025年SSR/V2ray/Shadowrocket/Clash每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了美国、日本、新加坡、韩国、欧洲、加拿大、香港等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
+                                                        <div class="row item xcblog-blog-item" data-date="2025-03-06">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-3-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240810/1be7898f0d880e324373dcd218a1d0f4.webp" alt="「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-3-6-free-subscribe-node.htm" class="xcblog-blog-url">
+                                        <h3 class="section-title mb-3 xcblog-blog-title">「3月6日」最高速度20.4M/S，2025年Clash/Shadowrocket/SSR/V2ray每天更新免费节点订阅链接</h3>
+                                    </a>
+                                    <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、美国、欧洲、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                                </div>
+                            </div>
                                                         <div class="row item xcblog-blog-item" data-date="2025-03-05">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-3-5-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -197,45 +236,6 @@
                                     <p>这一次的节点更新覆盖了美国、日本、加拿大、香港、新加坡、欧洲、韩国等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
                                 </div>
                             </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-02-26">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-2-26-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ba2d5a03aaf72b56501b25c1e174249b.webp" alt="「2月26日」最高速度18M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-2-26-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月26日」最高速度18M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了日本、美国、新加坡、韩国、加拿大、香港、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-02-25">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/576e2849d154a2569f03a0e1904fcf9e.webp" alt="「2月25日」最高速度21.5M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月25日」最高速度21.5M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了香港、美国、日本、韩国、加拿大、新加坡、欧洲等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
-                                                        <div class="row item xcblog-blog-item" data-date="2025-02-24">
-                                <div class="col-md-3">
-                                    <a href="/free-nodes/2025-2-24-node-share-links.htm" class="xcblog-blog-url">
-                                        <img src="/uploads/20240810/ef0258d05bc7d0211f47300749f0816c.webp" alt="「2月24日」最高速度22.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接" class="img-fluid rounded">
-                                    </a>
-                                </div>
-                                <div class="col-md-9">
-                                    <a href="/free-nodes/2025-2-24-node-share-links.htm" class="xcblog-blog-url">
-                                        <h3 class="section-title mb-3 xcblog-blog-title">「2月24日」最高速度22.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</h3>
-                                    </a>
-                                    <p>这一次的节点更新覆盖了新加坡、美国、韩国、日本、香港、加拿大、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                                </div>
-                            </div>
                             
                             <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>                        </div>
                     </div>
@@ -246,15 +246,15 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-5-free-node-subscribe.htm" title="「2月5日」最高速度22.6M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接">「2月5日」最高速度22.6M/S，2025年SSR/V2ray/Clash/Shadowrocket每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-39561.htm" title="动物疫苗注射注意事项及禁忌症是什么 动物疫苗注射注意事项及禁忌症是什么意思">动物疫苗注射注意事项及禁忌症是什么 动物疫苗注射注意事项及禁忌症是什么意思</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-17-free-subscribe-node.htm" title="「2月17日」最高速度21.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「2月17日」最高速度21.2M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-40081.htm" title="设计模式——原型模式">设计模式——原型模式</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-24-node-share-links.htm" title="「2月24日」最高速度22.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接">「2月24日」最高速度22.8M/S，2025年SSR/Shadowrocket/Clash/V2ray每天更新免费节点订阅链接</a></li>
-                        <li class="py-2"><a href="/news/article-45525.htm" title="宠物医院十大排行榜（宠物医院十大排行榜前十名）">宠物医院十大排行榜（宠物医院十大排行榜前十名）</a></li>
-                        <li class="py-2"><a href="/news/article-51586.htm" title="宠物粮商标取名大全图片 宠物粮商标取名大全图片及名字">宠物粮商标取名大全图片 宠物粮商标取名大全图片及名字</a></li>
-                        <li class="py-2"><a href="/news/article-57035.htm" title="宠物绝育活动文案（宠物绝育活动海报）">宠物绝育活动文案（宠物绝育活动海报）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-3-free-v2ray.htm" title="「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接">「3月3日」最高速度20.9M/S，2025年Shadowrocket/SSR/Clash/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-61049.htm" title="重庆宠物领养平台电话是多少号码啊（重庆宠物领养中心宠物领养）">重庆宠物领养平台电话是多少号码啊（重庆宠物领养中心宠物领养）</a></li>
+                        <li class="py-2"><a href="/news/article-44541.htm" title="济南宠物领养中心有哪些地方 济南宠物领养中心有哪些地方好">济南宠物领养中心有哪些地方 济南宠物领养中心有哪些地方好</a></li>
+                        <li class="py-2"><a href="/news/article-48384.htm" title="北京看动物咬伤的医院哪家好（北京狗咬伤去哪个医院比较好）">北京看动物咬伤的医院哪家好（北京狗咬伤去哪个医院比较好）</a></li>
+                        <li class="py-2"><a href="/news/article-36623.htm" title="三国杀武将faq（三国杀武将翻面有啥用）">三国杀武将faq（三国杀武将翻面有啥用）</a></li>
+                        <li class="py-2"><a href="/news/article-53178.htm" title="宠物粮食生产厂家电话地址（宠物粮食批发厂家价格）">宠物粮食生产厂家电话地址（宠物粮食批发厂家价格）</a></li>
+                        <li class="py-2"><a href="/news/article-39562.htm" title="人打的疫苗和动物打的疫苗一样吗知乎 人打的疫苗和动物打的疫苗一样吗知乎">人打的疫苗和动物打的疫苗一样吗知乎 人打的疫苗和动物打的疫苗一样吗知乎</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" title="「2月25日」最高速度21.5M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接">「2月25日」最高速度21.5M/S，2025年V2ray/Shadowrocket/SSR/Clash每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-29-node-share-links.htm" title="「1月29日」最高速度19.8M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接">「1月29日」最高速度19.8M/S，2025年Clash/SSR/Shadowrocket/V2ray每天更新免费节点订阅链接</a></li>
+                        <li class="py-2"><a href="/news/article-63415.htm" title="流浪猫不想被收养的表现（收养的流浪猫不想养了怎么办）">流浪猫不想被收养的表现（收养的流浪猫不想养了怎么办）</a></li>
                         <li class="py-2"><a href="/news/article-54250.htm" title="动物医院连锁机构 动物医院连锁机构有哪些">动物医院连锁机构 动物医院连锁机构有哪些</a></li>
                     </ul>
     </div>
@@ -267,7 +267,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
